intro updates, bib updates

--- a/docs/_sources/notebooks/charts_baseline.ipynb
+++ b/docs/_sources/notebooks/charts_baseline.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "27e435a5-da91-44fb-8953-6f14550202f3",
    "metadata": {},
    "source": [
     "# Notebook to generate the charts for the baseline, large interval runs of the model."
@@ -10,8 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "32606a79-d305-4955-8acb-60049a669506",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,13 +52,13 @@
     "        merged = pd.DataFrame()\n",
     "        merged_=pd.DataFrame()\n",
     "    merged = pd.concat([merged,stats_[i]],axis=0)\n",
-    "    merged_ = pd.concat([merged_,seas_[i]],axis =0)"
+    "    merged_ = pd.concat([merged_,seas_[i]],axis =0)\n",
+    "merged.to_csv(F\"{datadir}/all_results_baseline.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "3cb1ffd0-efc1-461c-b4ff-350725efe0b7",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +233,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e5a2877f-e8b0-429a-8070-e99f5215b6ce",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +405,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "47f9fe76-e3fc-4eeb-955b-6e959f04175b",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +439,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "589799f8-83ca-4b6f-84ba-c54a2a900940",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +478,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9ae6d481-4af3-4425-b8d0-be98da18db1d",
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +517,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e76e89a5-1c6a-4109-a00c-45bb0fd12576",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +556,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "342955e3-e65f-47e1-906a-7b76fc6145f1",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +595,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "17837dd2-0f10-4eab-acbb-f17e736b1e2b",
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +634,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "cc4e7259-d719-41f7-8a86-992c947b1d58",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +667,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "21e7c3c2-0520-4bcc-ad74-7555d5150933",
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +706,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5cb329c7-14e8-4424-873e-81f208848add",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +739,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c1f8f549-e270-4242-a287-0347160f6c12",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +780,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2fbd191b-f935-47cf-addf-d3ba55959a00",
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +821,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2ffe1cbc-3ea9-4dcf-aee6-964cff7e4e3a",
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +862,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "dfebc42b-e8f9-4ec0-9ddf-137c6670e3ff",
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +903,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "72ecd6c6-07d2-4dcd-9e80-02d606254ae6",
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +944,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c9a477d5-4562-4ab5-9c43-17a69e3edfcd",
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +985,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "668a59ba-a829-4402-a440-9cf294bbc3d0",
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1026,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7834e62f-57ba-4c4e-a1dc-953495832376",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1053,7 +1033,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1067,7 +1047,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
