--- a/references.bib
+++ b/references.bib
@@ -106,6 +106,120 @@ abstract = {Across the United States, human and environmental demands for water 
   note         = {Accessed: 2022-07-25}
 }
 
+
+@misc{fao_2,
+  title        = {Aquacrop News},
+  author       = {FAO},
+  howpublished = {https://grdc.com.au/resources-and-publications/grownotes/crop-agronomy/durum-western/GrowNote-Durum-West-3-Plant-Growth.pdf},
+  year         = {2022},
+  note         = {Accessed: 2022-07-26},
+  publisher    = {Food and Agricultural Organization}
+}
+
+@Article{rs12162666,
+AUTHOR = {Upreti, Deepak and Pignatti, Stefano and Pascucci, Simone and Tolomio, Massimo and Huang, Wenjiang and Casa, Raffaele},
+TITLE = {Bayesian Calibration of the Aquacrop-OS Model for Durum Wheat by Assimilation of Canopy Cover Retrieved from VENµS Satellite Data},
+JOURNAL = {Remote Sensing},
+VOLUME = {12},
+YEAR = {2020},
+NUMBER = {16},
+ARTICLE-NUMBER = {2666},
+URL = {https://www.mdpi.com/2072-4292/12/16/2666},
+ISSN = {2072-4292},
+ABSTRACT = {Crop growth models play an important role in agriculture management, allowing, for example, the spatialized estimation of crop yield information. However, crop model parameter calibration is a mandatory step for their application. The present work focused on the regional calibration of the Aquacrop-OS model for durum wheat by assimilating high spatial and temporal resolution canopy cover data retrieved from VEN&micro;S satellite images. The assimilation procedure was implemented using the Bayesian approach with the recent implementation of the Markov chain Monte Carlo (MCMC)-based Differential Evolution Adaptive Metropolis (DREAM) algorithm DREAM(KZS). The fraction of vegetation cover (fvc) was retrieved from the VEN&micro;S satellite images for two years, during the durum wheat growing seasons of 2018 and 2019 in Central Italy. The retrieval was based on a hybrid method using PROSAIL Radiative Transfer Model (RTM) simulations for training a Gaussian Process Regression (GPR) algorithm, combined with Active Learning to reduce the computational cost. The Aquacrop-OS model was calibrated with the fvc data of 2017&ndash;2018 for the Maccarese farm in Central Italy and validated with the 2018&ndash;2019 data. The retrieval accuracy of the fvc from the VEN&micro;S images were the Coefficient of Determination (R2) = 0.76, Root Mean Square Error (RMSE) = 0.09, and Relative Root Mean Square Error (RRMSE) = 11.6%, when compared with the ground-measured fvc. The MCMC results are presented in terms of Gelman&ndash;Rubin R statistics and MR statistics, Markov chains, and marginal posterior distribution functions, which are summarized with the mean values for the most sensitive crop parameters of the Aquacrop-OS model subjected to calibration. When validating for the fvc, the R2 of the model for year (2018&ndash;2019) ranged from 0.69 to 0.86. The RMSE, Relative Error (RE), Relative Variability (&alpha;), and Relative Bias (&beta;) ranged from 0.15 to 0.44, 0.19 to 2.79, 0.84 to 1.45, and 0.91 to 1.95, respectively. The present work shows the importance of the calibration of the Aquacrop-OS (AOS) crop water productivity model for durum wheat by assimilating remote sensing information from VEN&micro;S satellite data.},
+DOI = {10.3390/rs12162666}
+}
+
+@article{Zhang2019, author = "Tianxiang Zhang and Jinya Su and Cunjia Liu and Wen-Hua Chen", title = "{Integration of calibration and forcing methods for predicting timely crop states by using AquaCrop-OS model}", year = "2019", month = "11", url = "https://repository.lboro.ac.uk/articles/conference_contribution/Integration_of_calibration_and_forcing_methods_for_predicting_timely_crop_states_by_using_AquaCrop-OS_model/10319018", } 
+
+
+@Article{w14081188,
+AUTHOR = {Vannoppen, Astrid and Gobin, Anne},
+TITLE = {Estimating Yield from NDVI, Weather Data, and Soil Water Depletion for Sugar Beet and Potato in Northern Belgium},
+JOURNAL = {Water},
+VOLUME = {14},
+YEAR = {2022},
+NUMBER = {8},
+ARTICLE-NUMBER = {1188},
+URL = {https://www.mdpi.com/2073-4441/14/8/1188},
+ISSN = {2073-4441},
+ABSTRACT = {Crop-yield models based on vegetation indices such as the normalized difference vegetation index (NDVI) have been developed to monitor crop yield at higher spatial and temporal resolutions compared to agricultural statistical data. We evaluated the model performance of NDVI-based random forest models for sugar beet and potato farm yields in northern Belgium during 2016&ndash;2018. We also evaluated whether weather variables and root-zone soil water depletion during the growing season improved the model performance. The NDVI integral did not explain early and late potato yield variability and only partly explained sugar-beet yield variability. The NDVI series of early and late potato crops were not sensitive enough to yield affecting weather and soil water conditions. We found that water-saturated conditions early in the growing season and elevated temperatures late in the growing season explained a large part of the sugar-beet and late-potato yield variability. The NDVI integral in combination with monthly precipitation, maximum temperature, and root-zone soil water depletion during the growing season explained farm-scale sugar beet (R2 = 0.84, MSE = 48.8) and late potato (R2 = 0.56, MSE = 57.3) yield variability well from 2016 to 2018 in northern Belgium.},
+DOI = {10.3390/w14081188}
+}
+
+
+@Article{hess-26-923-2022,
+AUTHOR = {Mialyk, O. and Schyns, J. F. and Booij, M. J. and Hogeboom, R. J.},
+TITLE = {Historical simulation of maize water footprints with a new global gridded crop model ACEA},
+JOURNAL = {Hydrology and Earth System Sciences},
+VOLUME = {26},
+YEAR = {2022},
+NUMBER = {4},
+PAGES = {923--940},
+URL = {https://hess.copernicus.org/articles/26/923/2022/},
+DOI = {10.5194/hess-26-923-2022}
+}
+
+@article{LYU2022157104,
+title = {Multi-objective winter wheat irrigation strategies optimization based on coupling AquaCrop-OSPy and NSGA-III: A case study in Yangling, China},
+journal = {Science of The Total Environment},
+volume = {843},
+pages = {157104},
+year = {2022},
+issn = {0048-9697},
+doi = {https://doi.org/10.1016/j.scitotenv.2022.157104},
+url = {https://www.sciencedirect.com/science/article/pii/S0048969722042012},
+author = {Jingyu Lyu and Yanan Jiang and Chao Xu and Yujun Liu and Zhenhui Su and Jianchao Liu and Jianqiang He},
+keywords = {Irrigation strategy, Winter wheat, ACOSP, NSGA-III, TOPSIS-Entropy method},
+abstract = {The contradiction between crop water requirements and water supplies in Guanzhong Plain of Northwest China restricts the production of local winter wheat. The optimization of irrigation strategies considering multiple-objectives is of great significance to alleviate water crisis and sustainability of winter wheat production. This paper considered three typical hydrological years (dry year, normal year, and wet year), and a simulation optimization model coupling AquaCrop and NSGA-III was developed using Python language. The multi-objective optimization problem considered four objectives: (1) maximize crop yield (Y), (2) minimize irrigation water (IW), (3) maximize irrigation water productivity (IWP), and (4) maximize water use efficiency (WUE). The TOPSIS-Entropy method was then adopted for decision-making based on the Pareto fronts which were generated by multi-objective optimization, thus facilitating the optimization of the irrigation strategies. The results show that AquaCrop model could accurately simulate the growth process of winter wheat in the study area, the relative error is acceptable. The R2 of canopy cover (CC) is 0.75 and 0.61, and above ground biomass production (B) is 0.94 and 0.93, respectively. In the Pareto fronts, the difference between the maximum and minimum yield of winter wheat is 9.48 %, reflecting the diversity of multi-objective optimization results. According to the analysis results of this paper, the performance of different irrigation scenarios in each typical year varies greatly. The performance of the optimization in dry years is significantly better than that in normal years and wet years. The optimization of irrigation strategies and comparison of different scenarios play a positive role in improving the local water use efficiency, the winter wheat yield, as well as the sustainable development level of water resources.}
+}
+
+@article{anothercite,
+author = {Kassing, Ruud and De Schutter, Bart and Abraham, Edo},
+title = {Optimal Control for Precision Irrigation of a Large-Scale Plantation},
+journal = {Water Resources Research},
+volume = {56},
+number = {10},
+pages = {e2019WR026989},
+keywords = {model predictive control, AquaCrop-OS, deficit irrigation, sugarcane, water productivity, crop kite},
+doi = {https://doi.org/10.1029/2019WR026989},
+url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2019WR026989},
+eprint = {https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2019WR026989},
+note = {e2019WR026989 10.1029/2019WR026989},
+abstract = {Abstract Distributing water optimally is a complex problem that many farmers face yearly, especially in times of drought. In this work, we propose optimization-based feedback control to improve crop yield and water productivity in agriculture irrigation for a plantation consisting of multiple fields. The interaction between soil, water, crop (sugarcane in this work), and the atmosphere is characterized by an agrohydrological model using the crop water productivity modeling software AquaCrop-OS. To optimally distribute water over the fields, we propose a two-level optimal control approach. In this approach, the seasonal irrigation planner determines the optimal allocation of water over the fields for the entire growth season to maximize the crop yield, by considering an approximation of the crop productivity function. In addition, the model predictive controller takes care of the daily regulation of the soil moisture, respecting the water distribution decided on by the seasonal planner. To reduce the computational complexity of the daily controller, a mixed-logic dynamical model is identified based on the AquaCrop-OS model. This dynamical model incorporates saturation dynamics explicitly to improve model quality. To further improve performance, we create an evapotranspiration model by considering the expected development of the crop over the season using remote-sensing-based measurements of the canopy cover. The performance of the two-level approach is evaluated through a closed-loop simulation in AquaCrop-OS of a real sugarcane plantation in Mozambique. Our optimal control approach boosts water productivity by up to 30\% compared to local heuristics and can respect water use constraints that arise in times of drought.},
+year = {2020}
+}
+
+
+@Article{w12041080,
+AUTHOR = {Kuschel-Otárola, Mathias and Schütze, Niels and Holzapfel, Eduardo and Godoy-Faúndez, Alex and Mialyk, Oleksandr and Rivera, Diego},
+TITLE = {Estimation of Yield Response Factor for Each Growth Stage under Local Conditions Using AquaCrop-OS},
+JOURNAL = {Water},
+VOLUME = {12},
+YEAR = {2020},
+NUMBER = {4},
+ARTICLE-NUMBER = {1080},
+URL = {https://www.mdpi.com/2073-4441/12/4/1080},
+ISSN = {2073-4441},
+ABSTRACT = {We propose a methodology to estimate the yield response factor (i.e., the slope of the water-yield function) under local conditions for a given crop, weather, sowing date, and management at each growth stage using AquaCrop-OS. The methodology was applied to three crops (maize, sugar beet, and wheat) and four soil types (clay loam, loam, silty clay loam, and silty loam), considering three levels of bulk density: low, medium, and high. Yields are estimated for different weather and management scenarios using a problem-specific algorithm for optimal irrigation scheduling with limited water supply (GET-OPTIS). Our results show a good agreement between benchmarking (mathematical approach) and benchmark (estimated by AquaCrop-OS) using the Normalised Root Mean Square Error (NRMSE), allowing us to estimate reliable yield response factors ( K y ) under local conditions and to dispose of the typical simple mathematical approach, which estimates the yield reduction as a result of water scarcity at each growth stage.},
+DOI = {10.3390/w12041080}
+}
+
+
+@article{JONES2017240,
+title = {Brief history of agricultural systems modeling},
+journal = {Agricultural Systems},
+volume = {155},
+pages = {240-254},
+year = {2017},
+issn = {0308-521X},
+doi = {https://doi.org/10.1016/j.agsy.2016.05.014},
+url = {https://www.sciencedirect.com/science/article/pii/S0308521X16301585},
+author = {James W. Jones and John M. Antle and Bruno Basso and Kenneth J. Boote and Richard T. Conant and Ian Foster and H. Charles J. Godfray and Mario Herrero and Richard E. Howitt and Sander Janssen and Brian A. Keating and Rafael Munoz-Carpena and Cheryl H. Porter and Cynthia Rosenzweig and Tim R. Wheeler},
+keywords = {Agricultural systems, Models, Next generation, Data, History},
+abstract = {Agricultural systems science generates knowledge that allows researchers to consider complex problems or take informed agricultural decisions. The rich history of this science exemplifies the diversity of systems and scales over which they operate and have been studied. Modeling, an essential tool in agricultural systems science, has been accomplished by scientists from a wide range of disciplines, who have contributed concepts and tools over more than six decades. As agricultural scientists now consider the “next generation” models, data, and knowledge products needed to meet the increasingly complex systems problems faced by society, it is important to take stock of this history and its lessons to ensure that we avoid re-invention and strive to consider all dimensions of associated challenges. To this end, we summarize here the history of agricultural systems modeling and identify lessons learned that can help guide the design and development of next generation of agricultural system tools and methods. A number of past events combined with overall technological progress in other fields have strongly contributed to the evolution of agricultural system modeling, including development of process-based bio-physical models of crops and livestock, statistical models based on historical observations, and economic optimization and simulation models at household and regional to global scales. Characteristics of agricultural systems models have varied widely depending on the systems involved, their scales, and the wide range of purposes that motivated their development and use by researchers in different disciplines. Recent trends in broader collaboration across institutions, across disciplines, and between the public and private sectors suggest that the stage is set for the major advances in agricultural systems science that are needed for the next generation of models, databases, knowledge products and decision support systems. The lessons from history should be considered to help avoid roadblocks and pitfalls as the community develops this next generation of agricultural systems models.}
+}
+
 @misc{grdc,
   title        = {Grains Research and Development Corporation Grow Notes: Durum Section 3: Plant Growth (Phenology)},
   author       = {GRDC},
