textual updates, added t-test, figures

--- a/references.bib
+++ b/references.bib
@@ -130,7 +130,28 @@ ABSTRACT = {Crop growth models play an important role in agriculture management,
 DOI = {10.3390/rs12162666}
 }
 
-@article{Zhang2019, author = "Tianxiang Zhang and Jinya Su and Cunjia Liu and Wen-Hua Chen", title = "{Integration of calibration and forcing methods for predicting timely crop states by using AquaCrop-OS model}", year = "2019", month = "11", url = "https://repository.lboro.ac.uk/articles/conference_contribution/Integration_of_calibration_and_forcing_methods_for_predicting_timely_crop_states_by_using_AquaCrop-OS_model/10319018", } 
+@article{Zhang2019, 
+author = {Zhang, T and Su, J and Liu, C and Chen,W},
+title = {Integration of calibration and forcing methods for predicting timely crop states by using AquaCrop-OS model"},
+year = {2019},
+month = {11},
+url = {https://repository.lboro.ac.uk/articles/conference_contribution/Integration_of_calibration_and_forcing_methods_for_predicting_timely_crop_states_by_using_AquaCrop-OS_model/10319018"},
+journal = {Loughborough University Conference Contribution}
+}
+
+@article{TQMP12-1-30,
+    author =    {Derrick, B. AND White, P. },
+    journal =   {The Quantitative Methods for Psychology},
+    publisher = {TQMP},
+    title =     {Why Welch's test is Type I error robust},
+    year =      {2016},
+    volume =    {12},
+    number =    {1},
+    url =       {http://www.tqmp.org/RegularArticles/vol12-1/p030/p030.pdf },
+    pages =     {30-38},
+    abstract =  {The comparison of two means is one of the most commonly applied statistical procedures in psychology. The independent samples t-test corrected for unequal variances is commonly known as Welch's test, and is widely considered to be a robust alternative to the independent samples t-test. The properties of Welch's test that make it Type I error robust are examined. The degrees of freedom used in Welch's test are a random variable, the distributions of which are examined using simulation. It is shown how the distribution for the degrees of freedom is dependent on the sample sizes and the variances of the samples. The impact of sample variances on the degrees of freedom, the resultant critical value and the test statistic is considered, and hence gives an insight into why Welch's test is Type I error robust under normality.},
+    doi =       {10.20982/tqmp.12.1.p030}
+}
 
 
 @Article{w14081188,
